@@ -5,6 +5,9 @@ Unreleased
   since the unittest compat enhancements allow
   trial to handle it on its own
 
+- fix issue380 by making --resultlog only rely on longrepr instead
+  of the "reprcrash" attribute which only exists sometimes.
+
 - fix pexpect-3.0 compatibility for pytest's own tests.
   (fixes issue386)
 
